fix: vertically align icon and text on graph selector

--- a/src/renderer/components/graph-selector/GraphSelector.scss
+++ b/src/renderer/components/graph-selector/GraphSelector.scss
@@ -19,6 +19,7 @@
 
     .bp4-menu-item {
         padding: 3px 5px;
+        align-items: center;
     }
 
     .graph-selector-graph {
